--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-  <link rel="stylesheet" href="style/my-style.css">
-  <link rel="stylesheet" href="../dist/output.css">
+  <link rel="stylesheet" href="src/style/my-style.css">
+  <link rel="stylesheet" href="./dist/output.css">
   <title>RT 41 Lempake</title>
   <script>
     if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -114,7 +114,7 @@
       <div class="bg-primary w-full mx-auto bg-white shadow-lg px-14 pt-5 pb-10 text-gray-800 dark:bg-dark">
           <div class="w-full pt-1 pb-5">
               <div class="overflow-hidden border-4 border-white rounded-full w-24 h-24 -mt-[75px] mx-auto shadow-lg">
-                  <img src="../assets/images/pak-rt.jpg" alt="Foto Pak RT">
+                  <img src="assets/images/pak-rt.jpg" alt="Foto Pak RT">
               </div>
           </div>
           <div class="w-full mb-10">
@@ -144,11 +144,11 @@
     <div class="basis-1/12"></div>
     <div class="flex-1 items-center align-middle">
       <div class="flex justify-center md:justify-start 12">
-        <img src="../assets/images/logo-unmul.png" width="80px" alt="Logo Universitas Mulawarman">
+        <img src="assets/images/logo-unmul.png" width="80px" alt="Logo Universitas Mulawarman">
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="../assets/images/logo FT Unmul.png" width="80px" alt="Logo FT Unmul">
+        <img src="assets/images/logo FT Unmul.png" width="80px" alt="Logo FT Unmul">
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="../assets/images/logo-kami.png" width="80px" alt="Logo Kelompok 70">
+        <img src="assets/images/logo-kami.png" width="80px" alt="Logo Kelompok 70">
       </div>
     </div>
   </footer>
@@ -158,6 +158,6 @@
   <!-- footer end -->
 
 
-  <script src="js/script.js"></script>
+  <script src="./src/js/script.js"></script>
 </body>
 </html>
