--- a/index.html
+++ b/index.html
@@ -133,22 +133,20 @@
   <!-- Footer start -->
   <footer class="flex h-60 w-full bg-dark py-5 px-14 flex-col md:flex-row items-center border-y border-gray-500">
     <div class="flex-1 text-center md:text-right tracking-wide">
-      <P class="text-sm text-black font-bold text-gray-50">KELOMPOK 70</P>
-      <p class="text-sm text-black font-bold text-gray-50">KKN TEMATIK FT UNMUL</p>
-      <p class="text-sm pt-2 text-black text-gray-50">Ikuti kami :</p>
-      <p class="text-xl text-black text-gray-50 pb-5 md:pb-0">
-        <a href="https://www.instagram.com/kkn.ft_pinkyboys/" target="_blank"><i class="fab fa-instagram"></i><span class="text-sm"> kkn.ft_pinkyboys</span></a>&nbsp;
-        <a href="https://www.youtube.com/channel/UCl0L9mLhKPYhoGnmrreBx5g" target="_blank"><i class="fab fa-youtube"></i><span class="text-sm"> PINKY BOYS</span></a>&nbsp;
+      <P class="text-xs sm:text-sm text-black font-bold text-gray-50">KELOMPOK 70</P>
+      <p class="text-xs sm:text-sm text-black font-bold text-gray-50">KKN TEMATIK FT UNMUL</p>
+      <p class="text-xs sm:text-sm pt-2 text-black text-gray-50">Ikuti kami :</p>
+      <p class="text-md sm:text-xl text-black text-gray-50 pb-5 md:pb-0">
+        <a href="https://www.instagram.com/kkn.ft_pinkyboys/" target="_blank"><i class="fab fa-instagram"></i><span class="text-xs sm:text-sm"> kkn.ft_pinkyboys</span></a>&nbsp;
+        <a href="https://www.youtube.com/channel/UCl0L9mLhKPYhoGnmrreBx5g" target="_blank"><i class="fab fa-youtube"></i><span class="text-xs sm:text-sm"> PINKY BOYS</span></a>&nbsp;
       </p>
     </div>
     <div class="basis-1/12"></div>
     <div class="flex-1 items-center align-middle">
-      <div class="flex justify-center md:justify-start 12">
-        <img src="assets/images/logo-unmul.png" width="80px" alt="Logo Universitas Mulawarman">
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="assets/images/logo FT Unmul.png" width="80px" alt="Logo FT Unmul">
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="assets/images/logo-kami.png" width="80px" alt="Logo Kelompok 70">
+      <div class="flex justify-center md:justify-start">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20" src="assets/images/logo-unmul.png" alt="Logo Universitas Mulawarman">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" src="assets/images/logo FT Unmul.png" alt="Logo FT Unmul">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" src="assets/images/logo-kami.png" alt="Logo Kelompok 70">
       </div>
     </div>
   </footer>
