--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
     <div class="basis-1/12"></div>
     <div class="flex-1 items-center align-middle">
       <div class="flex justify-center md:justify-start">
-        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20" src="assets/images/logo-unmul.png" alt="Logo Universitas Mulawarman">
-        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" src="assets/images/logo FT Unmul.png" alt="Logo FT Unmul">
-        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" src="assets/images/logo-kami.png" alt="Logo Kelompok 70">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20" style="max-width: 100%;max-height: 100%;" src="assets/images/logo-unmul.png" alt="Logo Universitas Mulawarman">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" style="max-width: 100%;max-height: 100%;" src="assets/images/logo FT Unmul.png" alt="Logo FT Unmul">
+        <img class="inline-block h-10 w-10 sm:h-20 sm:w-20 ml-5" style="max-width: 100%;max-height: 100%;" src="assets/images/logo-kami.png" alt="Logo Kelompok 70">
       </div>
     </div>
   </footer>
