--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </section>
   <!-- wish end -->
   <!-- Footer start -->
-  <footer class="flex h-60 w-full bg-dark py-5 px-14 flex-col md:flex-row items-center border-y border-gray-500">
+  <footer class="flex pt-16 pb-32 w-full bg-dark py-5 px-14 flex-col md:flex-row items-center border-y border-gray-500">
     <div class="flex-1 text-center md:text-right tracking-wide">
       <P class="text-xs sm:text-sm text-black font-bold text-gray-50">KELOMPOK 70</P>
       <p class="text-xs sm:text-sm text-black font-bold text-gray-50">KKN TEMATIK FT UNMUL</p>
@@ -143,15 +143,15 @@
     </div>
     <div class="basis-1/12"></div>
     <div class="flex-1 items-center align-middle">
-      <div class="flex justify-center md:justify-start">
+      <div class="flex justify-center items-center md:justify-start">
         <div class="h-10 w-10 sm:h-20 sm:w-20">
-          <img style="max-width: 100%;max-height: 100%;" src="assets/images/logo-unmul.png" alt="Logo Universitas Mulawarman">
+          <img style='height: 100%; width: 100%; object-fit: contain' src="assets/images/logo-unmul.png" alt="Logo Universitas Mulawarman">
         </div>
         <div class="h-10 w-10 sm:h-20 sm:w-20 ml-5">
-          <img style="max-width: 100%;max-height: 100%;" src="assets/images/logo FT Unmul.png" alt="Logo FT Unmul">
+          <img style='height: 100%; width: 100%; object-fit: contain' src="assets/images/logo FT Unmul.png" alt="Logo FT Unmul">
         </div>
         <div class="h-10 w-10 sm:h-20 sm:w-20 ml-5">
-          <img style="max-width: 100%;max-height: 100%;" src="assets/images/logo-kami.png" alt="Logo Kelompok 70">
+          <img style='height: 100%; width: 100%; object-fit: contain' src="assets/images/logo-kami.png" alt="Logo Kelompok 70">
         </div>
       </div>
     </div>
@@ -160,7 +160,6 @@
     <p class="text-sm text-gray-50 py-3 text-center">Dibuat oleh <b>Salas Sepkardianto/1915016099</b></p>
   </footer>
   <!-- footer end -->
-
 
   <script src="./src/js/script.js"></script>
 </body>
