statistik and gallery

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="pages/fasilitas.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Fasilitas</a>
               </li>
               <li class="group">
-                <a href="pages/demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Demografi</a>
+                <a href="pages/demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Statistik</a>
               </li>
               <li class="group">
                 <a href="pages/galeri.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Galeri</a>
