--- a/pages/fasilitas.html
+++ b/pages/fasilitas.html
@@ -52,7 +52,7 @@
                 <a href="#fasilitas" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Fasilitas</a>
               </li>
               <li class="group">
-                <a href="./demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Demografi</a>
+                <a href="./demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Statistik</a>
               </li>
               <li class="group">
                 <a href="./galeri.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Galeri</a>
