--- a/pages/demografi.html
+++ b/pages/demografi.html
@@ -52,7 +52,7 @@
                 <a href="./fasilitas.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Fasilitas</a>
               </li>
               <li class="group">
-                <a href="./demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Demografi</a>
+                <a href="./demografi.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Statistik</a>
               </li>
               <li class="group">
                 <a href="./galeri.html" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Galeri</a>
@@ -83,8 +83,39 @@
   <section class="galeri pt-20">
     <div class="mb-10 px-5 lg:px-20">
       <h1 class="font-bold text-3xl dark:text-white ml-2 pb-2 border-b border-slate-400 ">Demografi</h1>
-      <div class="pt-3 pr-2 w-full grid place-items-center">
-        <canvas id="myChart"></canvas>
+      <div class="pt-3 pr-2 w-full">
+        <div class="card flex flex-row justify-evenly my-3">
+          <div class="flex-1 mr-1 sm:flex-none sm:w-36 border border-slate-400 rounded-md py-2">
+            <div class="text-center">Warga</div>
+            <div class="text-center font-bold">286</div>
+          </div>
+          <div class="flex-1 mr-1 sm:flex-none sm:w-36 border border-slate-400 rounded-md py-2">
+            <div class="text-center">Kepala Keluarga</div>
+            <div class="text-center font-bold">89</div>
+          </div>
+          <div class="flex-1 mr-1 sm:flex-none sm:w-36 border border-slate-400 rounded-md py-2">
+            <div class="text-center">Laki-laki</div>
+            <div class="text-center font-bold">143</div>
+          </div>
+          <div class="flex-1 sm:flex-none sm:w-36 border border-slate-400 rounded-md py-2">
+            <div class="text-center">Perempuan</div>
+            <div class="text-center font-bold">143</div>
+          </div>
+        </div>
+        <div class="gol-darah mt-10 border border-slate-400 p-2 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Golongan Darah</h2>
+          <div class="flex justify-around pt-4">
+            <div class="flex-1">
+              <iframe width="100%" height="366" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=1975720717&amp;format=interactive"></iframe>
+            </div>
+            <div class="flex flex-col flex-1 pl-4 justify-around justify-items-center">
+              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">A : 4 Orang</div>
+              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">B : 3 Orang</div>
+              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">O : 7 Orang</div>
+              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">Tidak Tahu : 271 Orang</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
