--- a/pages/demografi.html
+++ b/pages/demografi.html
@@ -80,10 +80,10 @@
   </header>
   <!-- Header End -->
 
-  <section class="galeri pt-20">
+  <section class="demografi pt-20 dark:text-white">
     <div class="mb-10 px-5 lg:px-20">
       <h1 class="font-bold text-3xl dark:text-white ml-2 pb-2 border-b border-slate-400 ">Demografi</h1>
-      <div class="pt-3 pr-2 w-full">
+      <div class="pt-3 pr-2 ml-2 w-full">
         <div class="card flex flex-row justify-evenly my-3">
           <div class="flex-1 mr-1 sm:flex-none sm:w-36 border border-slate-400 rounded-md py-2">
             <div class="text-center">Warga</div>
@@ -102,20 +102,85 @@
             <div class="text-center font-bold">143</div>
           </div>
         </div>
-        <div class="gol-darah mt-10 border border-slate-400 p-2 rounded-md">
-          <h2 class="font-bold text-xl text-primary">Golongan Darah</h2>
-          <div class="flex justify-around pt-4">
-            <div class="flex-1">
-              <iframe width="100%" height="366" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=1975720717&amp;format=interactive"></iframe>
+        <div class="jenis-kelamin mt-10 border border-slate-400 p-4 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Jenis Kelamin</h2>
+          <div class="flex flex-col md:flex-row justify-around pt-4">
+            <div class="md:flex-initial w-full md:w-3/4">
+              <iframe width="100%" height="400" seamless frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=115092950&amp;format=interactive"></iframe>
             </div>
-            <div class="flex flex-col flex-1 pl-4 justify-around justify-items-center">
-              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">A : 4 Orang</div>
-              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">B : 3 Orang</div>
-              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">O : 7 Orang</div>
-              <div class="border border-slate-400 w-52 rounded-md text-center py-4 font-bold">Tidak Tahu : 271 Orang</div>
+            <div class="flex flex-col flex-1 pl-0 md:pl-4 justify-around justify-items-center mt-6 md:mt-0">
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 font-bold">Laki-laki : 143 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">Perempuan : 143 Orang</div>
             </div>
           </div>
         </div>
+        <div class="gol-darah mt-6 border border-slate-400 p-4 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Golongan Darah</h2>
+          <div class="flex flex-col md:flex-row justify-around pt-4">
+            <div class="md:flex-initial w-full md:w-3/4">
+              <iframe width="100%" height="400px" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=1975720717&amp;format=interactive"></iframe>
+            </div>
+            <div class="flex flex-col flex-1 pl-0 md:pl-4 justify-around justify-items-center mt-6 md:mt-0">
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 font-bold">A : 4 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">B : 3 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">O : 7 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">Tidak Tahu : 271 Orang</div>
+            </div>
+          </div>
+        </div>
+        <div class="status-nikah mt-6 border border-slate-400 p-4 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Status Pernikahan</h2>
+          <div class="flex flex-col md:flex-row justify-around pt-4">
+            <div class="md:flex-initial w-full md:w-3/4">
+              <iframe width="100%" height="400" seamless frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=1243692073&amp;format=interactive"></iframe>
+            </div>
+            <div class="flex flex-col flex-1 pl-0 md:pl-4 justify-around justify-items-center mt-6 md:mt-0">
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 font-bold">Nikah : 145 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">Belum Nikah : 126 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">Cerai Mati : 10 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 md:mt-0 py-4 font-bold">Cerai Hidup : 5 Orang</div>
+            </div>
+          </div>
+        </div>
+        <div class="pendidikan mt-6 border border-slate-400 p-4 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Pendidikan</h2>
+          <div class="flex flex-col md:flex-row justify-around pt-4">
+            <div class="md:flex-initial w-full md:w-3/4">
+              <iframe width="100%" height="400" seamless frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=2138747454&amp;format=interactive"></iframe>
+            </div>
+            <div class="flex flex-col flex-1 pl-0 md:pl-4 justify-around justify-items-center mt-6 md:mt-0">
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 font-bold">S1 : 7 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Tdk/blm Sekolah : 61 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">SLTA : 78 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Blm Tamat SD : 49 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 mt-2 font-bold">Tamat SD : 49 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">D3 : 2 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">SLTP : 54 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Tidak diketahui : 1 Orang</div>
+            </div>
+          </div>
+        </div>
+        <div class="pekerjaan mt-6 border border-slate-400 p-4 rounded-md">
+          <h2 class="font-bold text-xl text-primary">Pekerjaan</h2>
+          <div class="flex flex-col md:flex-row justify-around pt-4">
+            <div class="md:flex-initial w-full md:w-3/4">
+              <iframe width="100%" height="400" seamless frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQR-dTAki_q5ZG9uzAzngvkSNBcDOsKpCtckuMQkvE6pRAh1ncJdlxfu3_X2atZfa4oW8Qs4Fv0fthP/pubchart?oid=161084466&amp;format=interactive"></iframe>
+            </div>
+            <div class="flex flex-col flex-1 pl-0 md:pl-4 justify-around justify-items-center mt-6 md:mt-0">
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 font-bold">Karyawan : 41 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">IRT : 62 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Pelajar : 57 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Petani : 44 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center py-4 mt-2 font-bold">Wiraswasta : 6 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Pedagang : 4 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Guru : 2 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Sopir : 1 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">PNS : 1 Orang</div>
+              <div class="border border-slate-400 w-full md:w-52 px-4 md:px-0 rounded-md text-left md:text-center mt-2 py-4 font-bold">Blm/Tdk Bekerja : 67 Orang</div>
+            </div>
+          </div>
+        </div>
+        <p class="mt-2"><span class="text-red-500">*</span> Data diatas diambil dari program kerja kelompok</p>
       </div>
     </div>
   </section>
